Fixed word-wrapping in blockquotes

--- a/theme/static/styles/_markdown.scss
+++ b/theme/static/styles/_markdown.scss
@@ -64,7 +64,7 @@
     background-color: shade($base-background-color, 5%);
     padding: 10px;
     margin: 0 0 10.5px;
-    word-break: break-all;
+    //word-break: break-all;
     word-wrap: break-word;
     border: 1px solid #cccccc;
     border-radius: 4px;
